<!--
  ~ Copyright 2018 The app Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/setup_header">

        <ListPreference
            android:defaultValue="red1"
            android:entries="@array/scouting_positions"
            android:entryValues="@array/scouting_positions"
            android:key="position"
            android:title="Position"
            app:useSimpleSummaryProvider="true" />
        <SwitchPreferenceCompat
            android:defaultValue="non-Processor"
            android:entries="@array/field_side"
            android:entryValues="@array/field_side"
            app:defaultValue="true"
            android:key="field_side"
            android:title="Depot Side?"/>
        <PreferenceScreen
            android:summary="Choose"
            android:title="Schedule File"
            app:key="schedule">
            <intent android:action="com.team2073.eagleforcescoutingapplication.activities.ChooseFileActivity" />
        </PreferenceScreen>
        <ListPreference
            android:defaultValue="testing"
            android:entries="@array/comp_name"
            android:entryValues="@array/comp_code"
            android:key="comp_code"
            android:title="Competition"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/remote_start_header">

        <SwitchPreferenceCompat
            android:key="remote_start_enabled"
            android:title="@string/remote_start_enable_title"
            android:summary="@string/remote_start_enable_summary"
            android:defaultValue="false" />

        <Preference
            android:key="scan_remote_start_qr"
            android:title="@string/scan_remote_start_qr_title"
            android:summary="@string/scan_remote_start_qr_summary" />

        <EditTextPreference
            android:key="replay_server_ip"
            android:title="@string/replay_server_ip_title"
            android:summary="@string/replay_server_ip_summary"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            android:key="replay_server_port"
            android:title="@string/replay_server_port_title"
            android:summary="@string/replay_server_port_summary"
            android:defaultValue="3000"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            android:key="replay_auth_key"
            android:title="@string/replay_auth_key_title"
            android:summary="@string/replay_auth_key_summary"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            android:key="replay_start_url"
            android:title="@string/replay_start_url_title"
            android:summary="@string/replay_start_url_summary"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

</androidx.preference.PreferenceScreen>
