<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.4" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_superleft"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.15" />

        <TextView
            android:id="@+id/textName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="35dp"
            android:gravity="center"
            android:text="@string/scout_name"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="@dimen/text_medium"
            app:layout_constraintEnd_toStartOf="@+id/guideline_left"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toStartOf="@id/guideline_superleft"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/editTextName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:inputType="textPersonName"
            android:textSize="@dimen/text_medium"
            app:layout_constraintEnd_toEndOf="@id/textName"
            app:layout_constraintStart_toStartOf="@id/textName"
            app:layout_constraintTop_toBottomOf="@id/textName" />

        <TextView
            android:id="@+id/textMatchNumber"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:gravity="center"
            android:text="@string/match_number"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="@dimen/text_medium"
            app:layout_constraintEnd_toEndOf="@id/textName"
            app:layout_constraintStart_toStartOf="@id/textName"
            app:layout_constraintTop_toBottomOf="@id/editTextName" />

        <EditText
            android:id="@+id/editTextMatchNumber"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:inputType="number"
            android:textSize="@dimen/text_medium"
            app:layout_constraintEnd_toEndOf="@id/textName"
            app:layout_constraintStart_toStartOf="@id/textName"
            app:layout_constraintTop_toBottomOf="@id/textMatchNumber" />

        <Spinner
            android:id="@+id/selectMatchType"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="@id/textName"
            app:layout_constraintStart_toStartOf="@id/textName"
            app:layout_constraintTop_toBottomOf="@id/editTextMatchNumber" />

        <TextView
            android:id="@+id/textTeamNumber"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:gravity="center"
            android:text="@string/team_number"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="@dimen/text_medium"
            app:layout_constraintEnd_toEndOf="@id/textName"
            app:layout_constraintStart_toStartOf="@id/textName"
            app:layout_constraintTop_toBottomOf="@id/selectMatchType" />

        <EditText
            android:id="@+id/editTextTeamNumber"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:inputType="number"
            android:textSize="@dimen/text_medium"
            android:maxLength="6"
            app:layout_constraintEnd_toEndOf="@id/textName"
            app:layout_constraintStart_toStartOf="@id/textName"
            app:layout_constraintTop_toBottomOf="@id/textTeamNumber" />

        <ImageView
            android:id="@+id/start_map"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:adjustViewBounds="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/start_position"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintHorizontal_weight="1.5"
            app:layout_constraintStart_toStartOf="@+id/guideline_left"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:layout_constraintWidth_percent="0.2" />

        <RadioGroup
            android:id="@+id/start_position"
            android:layout_width="0dp"
            android:layout_marginLeft="40dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toEndOf="@id/start_map"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="Start Position"
                android:textColor="@color/md_black_1000"
                android:textSize="@dimen/text_medium"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/pos0"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="No Show"
                android:textColor="#000000"
                android:textSize="@dimen/text_small" />

            <RadioButton
                android:id="@+id/pos1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="1"
                android:textColor="#000000"
                android:textSize="@dimen/text_small" />

            <RadioButton
                android:id="@+id/pos2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="2"
                android:textColor="#000000"
                android:textSize="@dimen/text_small" />

            <RadioButton
                android:id="@+id/pos3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="3"
                android:textColor="#000000"
                android:textSize="@dimen/text_small" />

            <RadioButton
                android:id="@+id/pos4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="4"
                android:textColor="#000000"
                android:textSize="@dimen/text_small" />

            <RadioButton
                android:id="@+id/pos5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="5"
                android:textColor="#000000"
                android:textSize="@dimen/text_small" />

        </RadioGroup>

        <Button
            android:id="@+id/manualStartReplayButton"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="16dp"
            android:backgroundTint="#ff009f"
            android:text="START REPLAY"
            app:autoSizeTextType="uniform"
            app:autoSizeMinTextSize="8sp"
            app:autoSizeMaxTextSize="14sp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="@id/start_position"
            app:layout_constraintHeight_percent="0.1"
            app:layout_constraintStart_toStartOf="@id/start_position"
            app:layout_constraintTop_toBottomOf="@id/start_position" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
